@@ -12,6 +12,7 @@
                     <height>100</height>
                     <texture>dialogs/extendedprogress/loading-back-busy.png</texture>
                     <aspectratio align="center">keep</aspectratio>
+                    <colordiffuse>Mod_Tags_Dark</colordiffuse>
                 </control>
 				<control type="image">
 					<description>Loading indicator</description>
