@@ -50,9 +50,9 @@
                     <height>30</height>
                     <sliderwidth>300</sliderwidth>
                     <sliderheight>30</sliderheight>
-                    <texturesliderbar border="22,1,22,1">buttons/OSD/slider_back.png</texturesliderbar>
-                    <textureslidernib>buttons/OSD/orb_nofo.png</textureslidernib>
-                    <textureslidernibfocus>buttons/OSD/orb_fo.png</textureslidernibfocus>
+                    <texturesliderbar border="22,1,22,1">buttons/osd/slider_back.png</texturesliderbar>
+                    <textureslidernib>buttons/osd/orb_nofo.png</textureslidernib>
+                    <textureslidernibfocus>buttons/osd/orb_fo.png</textureslidernibfocus>
                     <onup>11</onup>
                     <ondown>11</ondown>
                     <onleft>11</onleft>
