@@ -25,6 +25,7 @@
 				<!-- Panel -->
 				<control type="image">
 					<include>Mod_GreyPanelDimensions2</include>
+					
 				</control>
 				<!-- RECENT ITEMS -->
 				<control type="list" id="82">
