@@ -39,7 +39,7 @@
 				</control>
 				<control type="list" id="53">            	
 					<width>665</width>
-					<height>447</height>
+					<height>448</height>
 					<posx>325</posx>
 					<posy>14</posy>
 					<scrolltime tween="cubic" easing="out">350</scrolltime>
